--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                                             <div class="content-pay-item__valuta">
                                                 <div class="content-pay-item__title">US dollars (USD)</div>
                                                 <div
-                                                    class="content-pay-item__block content-pay-item__block_with-label block-with-label">
+                                                    class="content-pay-item__block content-pay-item__block_with-label content-pay-item__block_wrap block-with-label">
                                                     <div class="block-with-label__label">IBAN:</div>
                                                     <div
                                                         class="block-with-label__text text-block-with-label block-with-label__text_copy">
@@ -267,7 +267,7 @@
                                             <div class="content-pay-item__valuta">
                                                 <div class="content-pay-item__title">Euros (EUR)</div>
                                                 <div
-                                                    class="content-pay-item__block content-pay-item__block_with-label block-with-label">
+                                                    class="content-pay-item__block content-pay-item__block_with-label content-pay-item__block_wrap block-with-label">
                                                     <div class="block-with-label__label">IBAN:</div>
                                                     <div
                                                         class="block-with-label__text text-block-with-label block-with-label__text_copy">
