--- a/index.html
+++ b/index.html
@@ -200,7 +200,8 @@
                                             <div class="content-pay-item__block content-pay-item__block_text">
                                                 Зробити донат на монобанку
                                             </div>
-                                            <a href="" class="content-pay-item__btn btn">Задонатити</a>
+                                            <a href="https://send.monobank.ua/jar/4ow4iHVVuG" target="_blank"
+                                                class="content-pay-item__btn btn">Задонатити</a>
                                         </div>
                                     </div>
                                 </div>
@@ -327,7 +328,8 @@
                                                 <div class="content-pay-item__block content-pay-item__block_text">
                                                     Зробити донат на криптобанку WhitePay
                                                 </div>
-                                                <a href="" class="content-pay-item__btn btn">Задонатити</a>
+                                                <a href="https://pay.whitepay.com/crypto-jars/200aace0-81eb-4245-aea5-a9b3630102d0"
+                                                    target="_blank" class="content-pay-item__btn btn">Задонатити</a>
                                             </div>
                                         </div>
                                     </div>
@@ -391,28 +393,32 @@
                     <div class="info-footer__body">
                         <div class="info-footer__tel tel-info-footer">
                             <div class="tel-info-footer__label">Гаряча лінія</div>
-                            <a href="tel:+380999999999" class="tel-info-footer__link">+38 (099) 999 99 99</a>
+                            <a href="tel:+380683075011" class="tel-info-footer__link">+38 (068) 307 50 11</a>
                         </div>
                         <a href="" class="info-footer__btn btn">Задонатити</a>
                         <div class="info-footer__socials socials-info-footer">
                             <div class="socials-info-footer__items">
                                 <div class="socials-info-footer__item">
-                                    <a href="" class="socials-info-footer__link">
+                                    <a href="mailto:humanhelp@ukr.net" target="_blank"
+                                        class="socials-info-footer__link">
                                         <img src="img/socials/email.svg" alt="email">
                                     </a>
                                 </div>
                                 <div class="socials-info-footer__item">
-                                    <a href="" class="socials-info-footer__link">
+                                    <a href="https://www.instagram.com/ukrainian_business_front/" target="_blank"
+                                        class="socials-info-footer__link">
                                         <img src="img/socials/instagram.svg" alt="instagram">
                                     </a>
                                 </div>
                                 <div class="socials-info-footer__item">
-                                    <a href="" class="socials-info-footer__link">
+                                    <a href="https://t.me/+380683075011" target="_blank"
+                                        class="socials-info-footer__link">
                                         <img src="img/socials/telegram.svg" alt="telegram">
                                     </a>
                                 </div>
                                 <div class="socials-info-footer__item">
-                                    <a href="" class="socials-info-footer__link">
+                                    <a href="viber://chat?number=+380683075011" target="_blank"
+                                        class="socials-info-footer__link">
                                         <img src="img/socials/viber.svg" alt="viber">
                                     </a>
                                 </div>
