--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
                         </div>
                     </div>
                 </div>
-                <a href="" class="header__btn btn">Задонатити</a>
+                <a href="https://send.monobank.ua/jar/4ow4iHVVuG" target="_blank"
+                    class="header__btn btn btn-scroll">Задонатити</a>
             </div>
         </div>
     </div>
@@ -395,7 +396,8 @@
                             <div class="tel-info-footer__label">Гаряча лінія</div>
                             <a href="tel:+380683075011" class="tel-info-footer__link">+38 (068) 307 50 11</a>
                         </div>
-                        <a href="" class="info-footer__btn btn">Задонатити</a>
+                        <a href="https://send.monobank.ua/jar/4ow4iHVVuG" target="_blank"
+                            class="info-footer__btn btn btn-scroll">Задонатити</a>
                         <div class="info-footer__socials socials-info-footer">
                             <div class="socials-info-footer__items">
                                 <div class="socials-info-footer__item">
