--- a/index.html
+++ b/index.html
@@ -307,8 +307,7 @@
                                                 </div>
                                                 <div
                                                     class="content-pay-item__block content-pay-item__block_big-text block-big-text">
-                                                    <div
-                                                        class="block-big-text__info block-big-text__info_black copy-this">
+                                                    <div class="block-big-text__info block-big-text__info copy-this">
                                                         humanhelp@ukr.net</div>
                                                     <div class="block-big-text__copy copy">Скопіювати</div>
                                                 </div>
